Sửa lỗi không loading data ra ngoài view được

--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.JSInterop
 @using BlazorEcommerce.Client.Shared
 @using BlazorEcommerce.Shared
+@using Microsoft.AspNetCore.Components.Web
