--- a/BlazorEcommerce/Client/Shared/ProductList.razor
+++ b/BlazorEcommerce/Client/Shared/ProductList.razor
@@ -4,7 +4,7 @@
     @foreach (Product product in _products)
     {
         <li class="media my-3">
-            <div class="media-img-wrapper mr-2">
+            <div class="media-img-wrapper my-2">
                 <a href="#">
                     <img class="media-img" src="@product.ImageUrl" alt="@product.Title" />
                 </a>
@@ -21,7 +21,7 @@
 </ul>
 
 @code {
-    private List<Product> _products = new List<Product>();
+    private List<Product> _products = new();
 
     protected override async Task OnInitializedAsync()
     {
