--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -6,5 +6,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorEcommerce.Client.Shared
-@using BlazorEcommerce.Shared
 @using Microsoft.AspNetCore.Components.Web
+@using BlazorEcommerce.Client
+@using BlazorEcommerce.Shared
+@using Microsoft.AspNetCore.Components.WebAssembly.Hosting
+@using BlazorEcommerce.Client.Services.ProductService
