--- a/BlazorEcommerce/Client/Shared/ProductList.razor
+++ b/BlazorEcommerce/Client/Shared/ProductList.razor
@@ -5,7 +5,7 @@
 <h3>Product List</h3>
 @if (_productService.Products == null)
 {
-    <h3>Loadind data</h3>
+    <h3>Loadind data...</h3>
 }
 else
 {
