--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using BlazorEcommerce.Shared
 @using Microsoft.AspNetCore.Components.WebAssembly.Hosting
 @using BlazorEcommerce.Client.Services.ProductService
+@using BlazorEcommerce.Client.Services.CategoryService
