04 It's all about Products - Blazor WebAssembly in Action: Done

--- a/BlazorEcommerce/Client/Shared/HomeButton.razor
+++ b/BlazorEcommerce/Client/Shared/HomeButton.razor
@@ -8,6 +8,6 @@
 
     private void GoHome()
     {
-        NavigationManager.NavigateTo("");
+        NavigationManager.NavigateTo("/ ");
      }
 }
