--- a/BlazorEcommerce/Client/Pages/Index.razor
+++ b/BlazorEcommerce/Client/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@page "/search/{searchText}"
+@page "/search/{searchText}/{page:int}"
 @page "/{CategoryUrl}"
 @inject IProductService ProductService
 
@@ -20,11 +20,13 @@ else
     public string CategoryUrl { get; set; } = null;
     [Parameter]
     public string SearchText { get; set; } = null;
+    [Parameter]
+    public int Page { get; set; } = 1;
     protected override async Task OnParametersSetAsync()
     {
         if (SearchText != null)
         {
-            await ProductService.SearchProductsAsync(SearchText);
+            await ProductService.SearchProductsAsync(SearchText, page: Page);
         }
         else
         {
