--- a/BlazorEcommerce/Client/Shared/ProductList.razor
+++ b/BlazorEcommerce/Client/Shared/ProductList.razor
@@ -28,8 +28,13 @@ else
             </li>
         }
     </ul>
+    for (int i = 1; i <= _productService.PageCount; i++)
+    {
+        <a class="btn @(i == _productService.CurrentPage ? "btn-info" : "btn-outline-info") page-selection" href="/search/@_productService.LastSearchText/@i">
+            @i
+        </a>
+    }
 }
-
 
 @code {
     protected override void OnInitialized()
