05 Let's add Users - Authentication with JSON Web Tokens: hoàn thành

--- a/BlazorEcommerce/Client/Pages/Cart.razor
+++ b/BlazorEcommerce/Client/Pages/Cart.razor
@@ -34,7 +34,7 @@ else
         }
         <div class="container">
             <div class="cart-product-price">
-                Total (@_cartProductResponses.Count): $@_cartProductResponses.Sum(p=>p.Price)
+                Total (@_cartProductResponses.Count): $@_cartProductResponses.Sum(p=> ( p.Price * p.Quantity))
             </div>
         </div>
     </div>
