--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -12,3 +12,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Hosting
 @using BlazorEcommerce.Client.Services.ProductService
 @using BlazorEcommerce.Client.Services.CategoryService
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
