--- a/BlazorEcommerce/Client/Shared/ShopMainLayout.razor
+++ b/BlazorEcommerce/Client/Shared/ShopMainLayout.razor
@@ -3,9 +3,10 @@
 <div class="page">
     <main>
         <div class="top-row px-2">
-            <HomeButton></HomeButton>
-            <Search></Search>
-            <CartCounter></CartCounter>
+            <HomeButton />
+            <Search />
+            <UserButton />
+            <CartCounter />
         </div>
 
         <div class="nav-menu">
