--- a/BlazorEcommerce/Client/Pages/Login.razor
+++ b/BlazorEcommerce/Client/Pages/Login.razor
@@ -1,12 +1,13 @@
 ﻿@page "/login"
 @using BlazorEcommerce.Client.Services.AuthService
+@using BlazorEcommerce.Client.Services.CartService
 @using Blazored.LocalStorage
-@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.WebUtilities
 @inject IAuthService AuthService
 @inject ILocalStorageService LocalStorageService
 @inject NavigationManager NavigationManager
 @inject AuthenticationStateProvider AuthenticationStateProvider
+@inject ICartService CartService
 
 <PageTitle>Login</PageTitle>
 <h3>Login</h3>
@@ -52,6 +53,8 @@
             await LocalStorageService.SetItemAsync("authToken", result.Data);
 
             await AuthenticationStateProvider.GetAuthenticationStateAsync();
+
+            await CartService.StoreCartItemsAsync(true);
 
             NavigationManager.NavigateTo(_returnUrl);
         }
