--- a/BlazorEcommerce/Client/Pages/Cart.razor
+++ b/BlazorEcommerce/Client/Pages/Cart.razor
@@ -37,6 +37,9 @@ else
                 Total (@_cartProductResponses.Count): $@_cartProductResponses.Sum(p=> ( p.Price * p.Quantity))
             </div>
         </div>
+        <div class="container">
+            <button class="btn alert-success" @onclick="PleceOrder">Check out</button>
+        </div>
     </div>
 }
 
@@ -49,6 +52,10 @@ else
         await LoadCart();
     }
 
+    private void PleceOrder()
+    {
+
+    }
     private async Task UpdateQuantity(ChangeEventArgs e, CartProductResponse response)
     {
         response.Quantity = int.Parse(e.Value.ToString());
@@ -60,14 +67,13 @@ else
     }
     private async Task LoadCart()
     {
-        if ((await CartService.GetCartItems()).Count == 0)
+        await CartService.GetCartItemsCountAsync();
+
+        _cartProductResponses = await CartService.GetCartProductsAsync();
+
+        if (_cartProductResponses == null || _cartProductResponses.Count == 0)
         {
             _message = "Your cart is empty.";
-            _cartProductResponses = new List<CartProductResponse>();
-        }
-        else
-        {
-            _cartProductResponses = await CartService.GetCartProductsAsync();
         }
     }
 
