--- a/BlazorEcommerce/Client/Pages/Login.razor
+++ b/BlazorEcommerce/Client/Pages/Login.razor
@@ -56,6 +56,8 @@
 
             await CartService.StoreCartItemsAsync(true);
 
+            await CartService.GetCartItemsCountAsync();
+
             NavigationManager.NavigateTo(_returnUrl);
         }
     }
